Complete section Header

--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toboolist</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    <!-- Logo -->
+    <header>
+        <img class="middle" src="./img/Logo.png" alt="Logo Toboolist">
+        <span class="logo-text">Toboolist</span>
+    </header>
+    <!-- /Logo -->
+
+    <!-- Menu -->
+    <nav>
+
+    </nav>
+    <!-- /Menu -->
+
+    <!-- Task List -->
+    <main>
+
+    </main>
+    <!-- /Task List -->
 
 </body>
 
