Complete section nav

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <!-- Menu -->
     <nav>
+        <a href="" class="link" id="add-task">Add Task</a>
+        <a href="" class="link" id="add-section">Add Section</a>
 
     </nav>
     <!-- /Menu -->
