Complete section New Task

--- a/index.html
+++ b/index.html
@@ -24,12 +24,19 @@
     <nav>
         <a href="" class="link" id="add-task">Add Task</a>
         <a href="" class="link" id="add-section">Add Section</a>
-
     </nav>
     <!-- /Menu -->
 
     <!-- Task List -->
     <main>
+
+        <!-- New Task -->
+        <section>
+            <div class="task">New Task</div>
+            <span class="check"> Quarterly Newsletter</span>
+            <span class="category editorial">Editorial</span>
+        </section>
+        <!-- /New Task -->
 
     </main>
     <!-- /Task List -->
