--- a/index.html
+++ b/index.html
@@ -33,10 +33,36 @@
         <!-- New Task -->
         <section>
             <div class="task">New Task</div>
-            <span class="check"> Quarterly Newsletter</span>
-            <span class="category editorial">Editorial</span>
+            <div>
+                <span class="check"> Quarterly Newsletter</span>
+                <span class="category editorial">Editorial</span>
+            </div>
         </section>
         <!-- /New Task -->
+
+        <!-- Today -->
+        <section>
+            <div class="task">Today</div>
+            <div class="task-element">
+                <span class="check"> Recruiting blog post</span>
+                <span class="category editorial">Editorial</span>
+            </div>
+            <div class="task-element">
+                <span class="check"> Mobile app launch</span>
+                <span class="category q1-goals">Q1 Goals</span>
+            </div>
+            <div class="task-element">
+                <span class="ballot-x"> Interview John H.</span>
+                <span class="category recruiting">Recruiting</span>
+            </div>
+            <div class="task-element">
+                <span class="check"> Summit update to mobile storefronts</span>
+                <span class="category mobile">Mobile</span>
+            </div>
+
+        </section>
+
+        <!-- /Today -->
 
     </main>
     <!-- /Task List -->
