Complete saction Upcoming

--- a/index.html
+++ b/index.html
@@ -59,10 +59,30 @@
                 <span class="check"> Summit update to mobile storefronts</span>
                 <span class="category mobile">Mobile</span>
             </div>
-
         </section>
-
         <!-- /Today -->
+
+        <!-- Upcoming -->
+        <section>
+            <div class="task">Upcoming</div>
+            <div class="task-element">
+                <span class="ballot-x"> Schedule meeting with Alex</span>
+
+            </div>
+            <div class="task-element">
+                <span class="check"> Homepage refresh</span>
+                <span class="category website">Website</span>
+            </div>
+            <div class="task-element">
+                <span class="check"> Onboard new Sales team members</span>
+                <span class="category sales">Sales</span>
+            </div>
+            <div class="task-element">
+                <span class="check"> Review editorial calendar</span>
+                <span class="category editorial">Editorial</span>
+            </div>
+        </section>
+        <!-- /Upcoming -->
 
     </main>
     <!-- /Task List -->
